start function for weather'

--- a/index.html
+++ b/index.html
@@ -17,17 +17,16 @@
             <div class="form-check-inline col col-12 px-3">
                 <input
                 type="text"
-                class="form-input"
+                class="searchBar"
                 id="searchCity"
-                autofocus="true"
-                aria-describedby="searchCity"
+                placeholder="Salt Lake City"
               />
               <button type="submit" class="btn btn-primary" id="searchCityForm">
                 <span>search</span>
               </button>
             </div>
           </form>
-          <li class="list-group col col-12 d-none d-lg-block px-3" id="searchedCityLi"></li>
+          <li class="list-group col col-12 d-none d-lg-block px-3" id="pastCities"></li>
         </section>   
         <section class="col-12 col-lg-9 mt-3 d-flex flex-column px-3" id="display-weather-info">
             <div class="card">
@@ -141,6 +140,8 @@
         
         </section>    
 
- 
+        <script src="assets/script.js"></script>
+        <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
     </body>  
 </html>
