display current forcast

--- a/index.html
+++ b/index.html
@@ -32,22 +32,22 @@
             <div class="card">
               <div class="card-body">
                 <h2 class="card-title d-flex align-items-center lead font-weight-bold" style="height: 100px">
-                  <span id="cityName">Name of City</span>
+                  <span class="cityName">Name of City</span>
                   <span class="px-3" id="currentdate"> MM/DD/YY</span>
                   <img class="weather-icon" id="weatherIconToday" src="">
                   </img>
                 </h2>
                 <p class="card-text">
                   Temperature:
-                  <span id="tempToday">--</span>
+                  <span class="tempToday">--</span>
                 </p>
                 <p class="card-text">
                   Humidity:
-                  <span id="humidityToday">--</span>
+                  <span class="humidityToday">--</span>
                 </p>
                 <p class="card-text">
                   Wind:
-                  <span id="windSpeedToday">--</span>
+                  <span class="windSpeedToday">--</span>
                 </p>
               </div>
             </div>
@@ -141,7 +141,7 @@
         </section>    
 
         <script src="assets/script.js"></script>
-        <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+        <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
     </body>  
 </html>
